--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
+    "@types/ejs": "^3.1.3",
     "@types/mocha": "^10.0.2",
     "@types/node": "18.x",
     "@types/vscode": "^1.83.0",
@@ -67,6 +68,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "ejs": "^3.1.9"
   }
 }
