--- a/package.json
+++ b/package.json
@@ -47,9 +47,11 @@
     ]
   },
   "scripts": {
-    "vscode:prepublish": "npm run compile",
-    "compile": "tsc -p ./",
-    "watch": "tsc -watch -p ./",
+    "copy-assets": "copyfiles -u 1 ./src/**/*.ejs ./out",
+    "clean": "rimraf out/",
+    "vscode:prepublish": "npm run compile && npm run copy-assets",
+    "compile": "tsc -p ./ && npm run copy-assets",
+    "watch": "npm run clean && npm run copy-assets && tsc -w -p ./",
     "pretest": "npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
     "test": "node ./out/test/runTest.js"
@@ -62,6 +64,8 @@
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "@typescript-eslint/parser": "^6.7.3",
     "@vscode/test-electron": "^2.3.4",
+    "clean": "^4.0.2",
+    "copyfiles": "^2.4.1",
     "eslint": "^8.50.0",
     "glob": "^10.3.3",
     "mocha": "^10.2.0",
